# aegis

./: .gitignore  Makefile  README.md  agents.md  nx.json  package-lock.json  package.json  run  tsconfig.base.json  workspace.json
.github/workflows/: ci.yml  iac-policy-guard.yml  mcp-build.yml
apps/api/: jest.config.ts  project.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
apps/web/: .eslintrc.json  index.html  jest.config.ts  project.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vite.config.ts
apps/web-e2e/: playwright.config.ts  project.json
apps/worker/: jest.config.ts  project.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
docs/: architecture.md  assessment-lifecycle.md  automated-assessment-methodology.md  backlog.md  crosswalk-engine.md  custom-frameworks.md  integrations.md  iso-frameworks.md  policies-admin-guide.md  policies-user-guide.md  policies.md  reporting-operations.md  scheduler.md  service-users.md  testing.md
libs/shared/: jest.config.ts  project.json  tsconfig.build.json  tsconfig.json  tsconfig.lib.json
ops/: .env.example  Dockerfile.api  Dockerfile.worker  docker-compose.yaml  requirements.txt
ops/mcp/: aegis-mcp-aws-readonly.yaml  aegis-mcp-iac.yaml  (+1 more)
ops/mcp/aegis-mcp-aws-readonly/: Dockerfile  README.md  pyproject.toml
ops/mcp/aegis-mcp-aws-readonly/src/aegis_mcp_aws/: __init__.py  exceptions.py  server.py  session.py  utils.py
ops/mcp/aegis-mcp-aws-readonly/src/aegis_mcp_aws/health/: __init__.py  check_sts.py  check_token.py
ops/mcp/aegis-mcp-aws-readonly/src/aegis_mcp_aws/tools/: __init__.py  describe_security_groups.py  get_policy_summary.py  list_roles.py  run_prowler_scan.py
ops/mcp/aegis-mcp-iac/: Dockerfile  README.md  pyproject.toml
ops/mcp/aegis-mcp-iac/scripts/: run_policy_guard.py
ops/mcp/aegis-mcp-iac/src/aegis_mcp_iac/: __init__.py  analyzers.py  commands.py  exceptions.py  server.py
ops/mcp/aegis-mcp-iac/src/aegis_mcp_iac/health/: __init__.py  check_token.py
ops/mcp/aegis-mcp-iac/src/aegis_mcp_iac/tools/: __init__.py  check_iam_wildcards.py  check_s3_public.py  check_security_groups.py
ops/mcp/agents/: README.md  pyproject.toml
ops/mcp/agents/src/aegis_mcp_agents/: __init__.py  aws_posture_scan.py  iac_policy_guard.py
types/: aws-sdk.d.ts  dom-polyfills.d.ts
ui/: index.html  package.json
(+311 files in other folders)
