[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-mcp-aws-readonly"
version = "0.1.0"
description = "AWS read-only MCP server for posture scanning (IAM/S3/Network)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Aegis Platform" }]
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.24.0,<0.28.0",
  "boto3>=1.34.0",
  "langchain>=0.1.0",
  "mcp>=0.1.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "moto[boto3]>=5.0.0",
]

[project.scripts]
aegis-mcp-aws-readonly = "aegis_mcp_aws.server:main"

[tool.setuptools.packages.find]
where = ["src"]
